# tbsky_booking

./: .coveragerc  .env.example  Dockerfile  pyproject.toml
openflights_data/: airports.csv  countries.csv
tbsky_booking/: __init__.py  __main__.py
tbsky_booking/api/: __init__.py
tbsky_booking/api/v1/: __init__.py  bookings.py  flights.py
tbsky_booking/commands/: __init__.py  cli_manager.py
tbsky_booking/commands/core/: __init__.py  database.py
tbsky_booking/commands/flights/: __init__.py  fill_repositories.py
tbsky_booking/core/: __init__.py  security.py
tbsky_booking/core/config/: __init__.py  performance.py  security.py
tbsky_booking/core/consts/: __init__.py  bookings.py  core.py  flights.py  openflights.py
tbsky_booking/core/db_session/: cache.py  postgres.py
tbsky_booking/core/depends/: security.py
tbsky_booking/core/models/: __init__.py  model.py
tbsky_booking/core/repository/: __init__.py  abc_repository.py  db_repository.py  redis_repository.py
tbsky_booking/core/service/: resource.py
tbsky_booking/core/types/: __init__.py  openflights.py  sqlmodel.py
tbsky_booking/models/: bookings.py  flights.py
tbsky_booking/repository/: bookings.py
tbsky_booking/repository/flights/: __init__.py  base_flights_repositories.py  db_repositories.py  google_flights_repositories.py  ryanair_flights_repositories.py
tbsky_booking/schemas/: __init__.py  bookings.py  flights.py
tbsky_booking/services/: bookings.py
tbsky_booking/services/flights/: __init__.py  get_flights_from_sources.py
tbsky_booking/utils/: __init__.py  asyncio.py  datetime.py  dict.py  itertools.py
tbsky_booking/utils/fastapi/: __init__.py  cache.py  coder.py
tests/with_app/: conftest.py
tests/with_app/api/v1/: test_bookings_api_v1.py
tests/with_app/models/: bookings.py  flights.py
tests/without_app/utils/: test_datetime.py  test_dict.py  test_itertools.py
